--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,4 @@
+publish_to: none
 name: tflite_flutter_helper
 description: Easy, fast processing and manipulation input and output of TensorFlow Lite Models.
 version: 0.3.0
@@ -13,7 +14,10 @@ dependencies:
   meta: ^1.1.8
   quiver: ^3.0.1
   path_provider: ^2.0.1
-  tflite_flutter: ^0.9.0
+  tflite_flutter:
+    git: 
+      url: https://github.com/D4vr4n/tflite_flutter_plugin.git
+      ref: master
   tuple: ^2.0.0
   camera: ^0.8.1+3
   ffi: ^1.0.0
